--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -113,6 +113,24 @@
   cursor: pointer
   &:hover
     box-shadow: 0 0 20px 2px $accent
+.basket
+  position: relative
+  &__product
+    background-color: $white
+    border: 1px solid $accent
+    position: absolute
+    z-index: 1
+    top: 80px
+    right: 0
+    &_hidden
+      display: none
+  &__name
+    display: grid
+    grid-template-columns: repeat(4, 1fr)
+    gap: 10px
+    margin-bottom: 10px
+    border-bottom: 1px solid #ebebeb
+    padding-bottom: 10px
 
 .dropdown__menu
   display: grid
@@ -470,6 +488,8 @@
       justify-content: center
       align-items: center
       text-decoration: none
+      background: none
+      cursor: pointer
       &:hover
         box-shadow: 0 0 10px $light
     &__img
